fixed byline padding for scroll spacing

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ h1{
   font-weight:400;
   margin-top: 2em;
   margin-bottom: 1.5em;
+  padding-top:2em;
 }
 
 #first-top {
